--- a/Estilos/stylesHistoria.css
+++ b/Estilos/stylesHistoria.css
@@ -5,10 +5,6 @@
   font-family: Arial, sans-serif;
 }
 
-img{
-  width: 10%;
-}
-
 .logo {
   width: 50px;
   height: 50px;
@@ -674,18 +670,22 @@ img{
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 3px;
   background-color: #ffffff;
-  padding: 30px;
+  padding: 20px;
   width: 450px;
   border-radius: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.form img{
+  max-width: 40%;
 }
 
 ::placeholder {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .form button {
