--- a/Estilos/aromaStyles.css
+++ b/Estilos/aromaStyles.css
@@ -766,7 +766,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 8px;
   background-color: #ffffff;
   padding: 20px;
   width: 450px;
@@ -776,7 +776,7 @@
 }
 
 .form img{
-  max-width: 40%;
+  max-width: 25%;
 }
 
 ::placeholder {
@@ -790,7 +790,8 @@
 
 .flex-column > label {
   color: #151717;
-  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .inputForm {
@@ -858,11 +859,20 @@
   background-color: #4d5050;
 }
 
+.div-login h3{
+  font-size: 1.5rem;
+  color: #7a5230;
+  margin-bottom: 2rem;
+  font-family: 'Georgia', serif;
+}
+
 .form p {
   text-align: center;
   color: black;
   font-size: 14px;
   margin: 5px 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .btn {
@@ -1045,6 +1055,15 @@
   color: rgb(0, 0, 0);
 }
 
+.div-login p{
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .title {
   text-align: center;
   font-size: 1.5rem;
@@ -1066,6 +1085,8 @@
   display: block;
   color: rgb(0, 0, 0);
   margin-bottom: 4px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .input-group input {
@@ -1075,6 +1096,8 @@
   outline: 0;
   padding: 0.75rem 1rem;
   color: rgb(0, 0, 0);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .input-group input:focus {
