--- a/Estilos/aromaStyles.css
+++ b/Estilos/aromaStyles.css
@@ -656,13 +656,16 @@
   justify-content: center;
   width: 50px;
   height: 50px;
-  overflow: hidden;
   background-color: rgb(252, 252, 252);
   padding: 15px;
   border-radius: 50%;
   cursor: pointer;
   text-decoration: none;
   transition: all 0.3s;
+}
+
+.search-icon-wrapper {
+  position: relative;
 }
 
 .tab:hover {
@@ -675,6 +678,24 @@
 .tab:active{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transform: scale(0.95);
+}
+
+.msg-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  font-size: 0.7em;
+  color: red;
+  width: 25px;
+  height: 25px;
+  font-weight: bold;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Estilo para la visibilidad del menú */
@@ -913,7 +934,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  width: 90%;
+  width: 80%;
   max-width: 400px;
   text-align: center;
 }
@@ -1038,6 +1059,12 @@
   .no-products-content img {
     max-width: 90px;
   }
+
+  #signupForm{
+  border-radius: 6px;
+  width: 80%;
+  max-width: 350px;
+  }
 }
 
 @keyframes fadeIn {
@@ -1051,7 +1078,7 @@
   width: 320px;
   border-radius: 0.75rem;
   background-color: rgba(243, 244, 246, 1);
-  padding: 2rem;
+  padding: 1rem;
   color: rgb(0, 0, 0);
 }
 
@@ -1073,35 +1100,6 @@
 
 .form-login {
   margin-top: 1.5rem;
-}
-
-.input-group {
-  margin-top: 0.25rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.input-group label {
-  display: block;
-  color: rgb(0, 0, 0);
-  margin-bottom: 4px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input {
-  width: 100%;
-  border-radius: 0.375rem;
-  border: 1px solid rgba(55, 65, 81, 1);
-  outline: 0;
-  padding: 0.75rem 1rem;
-  color: rgb(0, 0, 0);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input:focus {
-  border-color: rgba(167, 139, 250);
 }
 
 .forgot {
@@ -1133,6 +1131,11 @@
   border: none;
   border-radius: 0.375rem;
   font-weight: 600;
+  cursor: pointer;
+}
+
+.sign:hover {
+  background-color: #4d5050;
 }
 
 .social-message {
