--- a/Estilos/stylesHistoria.css
+++ b/Estilos/stylesHistoria.css
@@ -663,6 +663,12 @@
     margin-bottom: 1rem;
     align-items: center;
   }
+
+  #signupForm{
+    border-radius: 6px;
+    width: 80%;
+    max-width: 350px;
+  }
 }
 
 /*Estilos del formulario*/
@@ -817,7 +823,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  width: 90%;
+  width: 80%;
   max-width: 400px;
   text-align: center;
 }
@@ -933,35 +939,6 @@
 
 .form-login {
   margin-top: 1.5rem;
-}
-
-.input-group {
-  margin-top: 0.25rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.input-group label {
-  display: block;
-  color: rgb(0, 0, 0);
-  margin-bottom: 4px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input {
-  width: 100%;
-  border-radius: 0.375rem;
-  border: 1px solid rgba(55, 65, 81, 1);
-  outline: 0;
-  padding: 0.75rem 1rem;
-  color: rgb(0, 0, 0);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input:focus {
-  border-color: rgba(167, 139, 250);
 }
 
 .forgot {
