--- a/Estilos/stylesPreparacion.css
+++ b/Estilos/stylesPreparacion.css
@@ -641,88 +641,88 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  width: 90%;
+  width: 80%;
   max-width: 400px;
   text-align: center;
 }
   
-  /*Boton cerrar formulario*/
-  /* From Uiverse.io by javierBarroso */ 
-  .button_close {
-    position: relative; 
-    background: red;
-    color: white;
-    width: 3em;
-    height: 3em;
-    border: none;
-    display: flex;
-    border-radius: 5px;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-size: 14px;
-    z-index: 1000;
+/*Boton cerrar formulario*/
+/* From Uiverse.io by javierBarroso */ 
+.button_close {
+  position: relative; 
+  background: red;
+  color: white;
+  width: 3em;
+  height: 3em;
+  border: none;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 14px;
+  z-index: 1000;
+}
+
+.X {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2em;
+  height: 1.5px;
+  background-color: rgb(255, 255, 255);
+  transform: translateX(-50%) rotate(45deg);
+}
+
+.Y {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2em;
+  height: 1.5px;
+  background-color: #fff;
+  transform: translateX(-50%) rotate(-45deg);
+}
+
+.close {
+  position: absolute;
+  display: flex;
+  padding: 0.8rem 1.5rem;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-50%);
+  top: -70%;
+  left: 50%;
+  width: 3em;
+  height: 1.7em;
+  font-size: 12px;
+  background-color: rgb(19, 22, 24);
+  color: rgb(187, 229, 236);
+  border: none;
+  border-radius: 3px;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.button_close:hover {
+  background-color: rgb(211, 21, 21);
+}
+
+.button_close:active {
+  background-color: rgb(130, 0, 0);
+}
+
+.button_close:hover > .close {
+  animation: close 0.2s forwards 0.25s;
+}
+
+@keyframes close {
+  100% {
+    opacity: 1;
   }
-  
-  .X {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 2em;
-    height: 1.5px;
-    background-color: rgb(255, 255, 255);
-    transform: translateX(-50%) rotate(45deg);
-  }
-  
-  .Y {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 2em;
-    height: 1.5px;
-    background-color: #fff;
-    transform: translateX(-50%) rotate(-45deg);
-  }
-  
-  .close {
-    position: absolute;
-    display: flex;
-    padding: 0.8rem 1.5rem;
-    align-items: center;
-    justify-content: center;
-    transform: translateX(-50%);
-    top: -70%;
-    left: 50%;
-    width: 3em;
-    height: 1.7em;
-    font-size: 12px;
-    background-color: rgb(19, 22, 24);
-    color: rgb(187, 229, 236);
-    border: none;
-    border-radius: 3px;
-    pointer-events: none;
-    opacity: 0;
-  }
-  
-  .button_close:hover {
-    background-color: rgb(211, 21, 21);
-  }
-  
-  .button_close:active {
-    background-color: rgb(130, 0, 0);
-  }
-  
-  .button_close:hover > .close {
-    animation: close 0.2s forwards 0.25s;
-  }
-  
-  @keyframes close {
-    100% {
-      opacity: 1;
-    }
-  }
+}
 
 /* Contenedor principal de términos */
 .terms {
@@ -800,22 +800,28 @@
 /* Estilos para dispositivos móviles */
 @media (max-width: 768px) {
   .contenedor-terminos {
-      padding: 20px;
-      margin: 10px;
+    padding: 20px;
+    margin: 10px;
   }
 
   .contenedor-terminos h2 {
-      font-size: 1.8em;
+    font-size: 1.8em;
   }
 
   .contenedor-terminos h3 {
-      font-size: 1.3em;
-      padding-left: 15px;
+    font-size: 1.3em;
+    padding-left: 15px;
   }
 
   .contenedor-terminos p {
-      padding: 0 10px;
-      font-size: 0.95em;
+    padding: 0 10px;
+    font-size: 0.95em;
+  }
+
+  #signupForm{
+    border-radius: 6px;
+    width: 80%;
+    max-width: 350px;
   }
 }
 
@@ -868,35 +874,6 @@
 
 .form-login {
   margin-top: 1.5rem;
-}
-
-.input-group {
-  margin-top: 0.25rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.input-group label {
-  display: block;
-  color: rgb(0, 0, 0);
-  margin-bottom: 4px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input {
-  width: 100%;
-  border-radius: 0.375rem;
-  border: 1px solid rgba(55, 65, 81, 1);
-  outline: 0;
-  padding: 0.75rem 1rem;
-  color: rgb(0, 0, 0);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-group input:focus {
-  border-color: rgba(167, 139, 250);
 }
 
 .forgot {
