--- a/Estilos/stylesPreparacion.css
+++ b/Estilos/stylesPreparacion.css
@@ -1,25 +1,25 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-  }
-  
-  .brand-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .brand-container img {
-    height: 100px;
-    width: auto;
-  }
-  
-  .brand-container h1 span {
-    font-size: 2.5rem;
-    color: #7a5230;
-    margin-bottom: 2rem;
-    font-family: 'Georgia', serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+.brand-container {
+  display: flex;
+  align-items: center;
+}
+
+.brand-container img {
+  height: 100px;
+  width: auto;
+}
+
+.brand-container h1 span {
+  font-size: 2.5rem;
+  color: #7a5230;
+  margin-bottom: 2rem;
+  font-family: 'Georgia', serif;
 }
 
 .padding-btn{
@@ -28,130 +28,130 @@
 }
   
 .header {
-    padding: 1rem;
-    background-color: #f5f0e1;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
+  padding: 1rem;
+  background-color: #f5f0e1;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 .nav {
-    max-width: 1300px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav-links {
-    display: flex;
-    gap: 2rem;
-  }
-  
+  display: flex;
+  gap: 2rem;
+}
+
 .nav-links a {
-    text-decoration: none;
-    color: #333;
-  }
-  
+  text-decoration: none;
+  color: #333;
+}
+
 .hero {
-    background: #f5f5f5;
-    border-radius: 10px;
-    padding: 10px;
-    text-align: left;
-  }
-  
+  background: #f5f5f5;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: left;
+}
+
 .hero-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .hero-text {
-    max-width: 1200px;
-  }
-  
+  max-width: 1200px;
+}
+
 .hero-text h1 {
-    font-size: 2.5rem;
-    color: #7a5230;
-    margin-bottom: 2rem;
-    font-family: 'Georgia', serif;
-  }
-  
-  .footer {
-    background: #6d421d;
-    color: white;
-    border-radius: 10px;
-    display: grid;
-    padding: 4rem 0;
-    background-image: url('../aromaImagenes/backgroundInferior.jpg');
-  }
-  
-  .footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-    padding: 0 1rem;
-    font-style: italic;
-    animation: fadeIn 0.8s ease-in-out;
-  }
-  
-  .footer-content a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .footer-text{
-    background-color: #333;
-    border-radius: 20px;
-    padding: 10px;
-  }
-  
-  .social-links {
+  font-size: 2.5rem;
+  color: #7a5230;
+  margin-bottom: 2rem;
+  font-family: 'Georgia', serif;
+}
+
+.footer {
+  background: #6d421d;
+  color: white;
+  border-radius: 10px;
+  display: grid;
+  padding: 4rem 0;
+  background-image: url('../aromaImagenes/backgroundInferior.jpg');
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  padding: 0 1rem;
+  font-style: italic;
+  animation: fadeIn 0.8s ease-in-out;
+}
+
+.footer-content a {
+  color: white;
+  text-decoration: none;
+}
+
+.footer-text{
+  background-color: #333;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.social-links {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
     display: flex;
-    gap: 1rem;
-    margin-top: 1rem;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    padding: 1rem;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 10px;
   }
-  
-  @media (max-width: 768px) {
-    .nav-links {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      right: 0;
-      padding: 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      border-radius: 10px;
-    }
-  
-    .nav-links.active {
-      display: flex;
-    }
-  
-    .nav-toggle {
-      display: block;
-    }
-  
-    .hero-content {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    .hero-image {
-      margin-top: 2rem;
-    }
-  
-    .footer{
-      align-items: center;
-      padding: 20px;
-    }
+
+  .nav-links.active {
+    display: flex;
   }
+
+  .nav-toggle {
+    display: block;
+  }
+
+  .hero-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero-image {
+    margin-top: 2rem;
+  }
+
+  .footer{
+    align-items: center;
+    padding: 20px;
+  }
+}
 
 /*Métodos de preparación*/
 .metodos-preparacion {
@@ -365,46 +365,67 @@
     }
 }
   
-  /*Card buttons*/
-  /* From Uiverse.io by vinodjangid07 */ 
-  .navigation-card {
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    background-color: rgb(255, 255, 255);
-    padding: 15px 20px;
-    border-radius: 50px;
-  }
-  
-  .tab {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-    background-color: rgb(252, 252, 252);
-    padding: 15px;
-    border-radius: 50%;
-    cursor: pointer;
-    text-decoration: none;
-    transition: all 0.3s;
-  }
-  
-  .tab:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transform: scale(1.05);
-    background-color: #e0c8b0;
-    color: #fff;
-  }
-  
-  .tab:active{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transform: scale(0.95);
-  }
+/*Card buttons*/
+/* From Uiverse.io by vinodjangid07 */ 
+.navigation-card {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  background-color: rgb(255, 255, 255);
+  padding: 15px 20px;
+  border-radius: 50px;
+}
+
+.tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(252, 252, 252);
+  padding: 15px;
+  border-radius: 50%;
+  cursor: pointer;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.tab:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+  background-color: #e0c8b0;
+  color: #fff;
+}
+
+.tab:active{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(0.95);
+}
+
+.search-icon-wrapper {
+  position: relative;
+}
+
+.msg-count {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  font-size: 0.7em;
+  color: red;
+  width: 25px;
+  height: 25px;
+  font-weight: bold;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   
   /* Estilo para la visibilidad del menú */
   /* Botón hamburguesa (pantallas pequeñas) */
@@ -1037,4 +1058,334 @@
 
 .logout-btn:active {
   transform: translate(2px ,2px);
+}
+
+/* From Uiverse.io by isfan4ik */ 
+.container {
+  top: calc(50% - 140px);
+  left: calc(50% - 150px);
+  width: 300px;
+  height: 280px;
+  position: relative; 
+}
+
+.coffee-header {
+  width: 100%;
+  height: 80px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ddcfcc;
+  border-radius: 10px;
+}
+
+.coffee-header__buttons {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: 25px;
+  background-color: #282323;
+  border-radius: 50%;
+}
+
+.coffee-header__buttons::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  bottom: -8px;
+  left: calc(50% - 4px);
+  background-color: #615e5e;
+}
+
+.coffee-header__button-one {
+  left: 15px;
+}
+
+.coffee-header__button-two {
+  left: 50px;
+}
+
+.coffee-header__display {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+  border-radius: 50%;
+  background-color: #9acfc5;
+  border: 5px solid #43beae;
+  box-sizing: border-box;
+}
+
+.coffee-header__details {
+  width: 8px;
+  height: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #9b9091;
+  box-shadow: -12px 0 0 #9b9091, -24px 0 0 #9b9091;
+}
+
+.coffee-medium {
+  width: 90%;
+  height: 160px;
+  position: absolute;
+  top: 80px;
+  left: calc(50% - 45%);
+  background-color: #bcb0af;
+}
+
+.coffee-medium:before {
+  content: "";
+  width: 90%;
+  height: 100px;
+  background-color: #776f6e;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 45%);
+  border-radius: 20px 20px 0 0;
+}
+
+.coffe-medium__exit {
+  width: 60px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 30px);
+  background-color: #231f20;
+}
+
+.coffe-medium__exit::before {
+  content: "";
+  width: 50px;
+  height: 20px;
+  border-radius: 0 0 50% 50%;
+  position: absolute;
+  bottom: -20px;
+  left: calc(50% - 25px);
+  background-color: #231f20;
+}
+
+.coffe-medium__exit::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  bottom: -30px;
+  left: calc(50% - 5px);
+  background-color: #231f20;
+}
+
+.coffee-medium__arm {
+  width: 70px;
+  height: 20px;
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  background-color: #231f20;
+}
+
+.coffee-medium__arm::before {
+  content: "";
+  width: 15px;
+  height: 5px;
+  position: absolute;
+  top: 7px;
+  left: -15px;
+  background-color: #9e9495;
+}
+
+.coffee-medium__cup {
+  width: 80px;
+  height: 47px;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 40px);
+  background-color: #FFF;
+  border-radius: 0 0 70px 70px / 0 0 110px 110px;
+}
+
+.coffee-medium__cup::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 6px;
+  right: -13px;
+  border: 5px solid #FFF;
+  border-radius: 50%;
+}
+
+@keyframes liquid {
+  0% {
+    height: 0px;
+    opacity: 1;
+  }
+
+  5% {
+    height: 0px;
+    opacity: 1;
+  }
+
+  20% {
+    height: 62px;
+    opacity: 1;
+  }
+
+  95% {
+    height: 62px;
+    opacity: 1;
+  }
+
+  100% {
+    height: 62px;
+    opacity: 0;
+  }
+}
+
+.coffee-medium__liquid {
+  width: 6px;
+  height: 63px;
+  opacity: 0;
+  position: absolute;
+  top: 50px;
+  left: calc(50% - 3px);
+  background-color: #74372b;
+  animation: liquid 4s 4s linear infinite;
+}
+
+.coffee-medium__smoke {
+  width: 8px;
+  height: 20px;
+  position: absolute;
+  border-radius: 5px;
+  background-color: #b3aeae;
+}
+
+@keyframes smokeOne {
+  0% {
+    bottom: 20px;
+    opacity: 0;
+  }
+
+  40% {
+    bottom: 50px;
+    opacity: .5;
+  }
+
+  80% {
+    bottom: 80px;
+    opacity: .3;
+  }
+
+  100% {
+    bottom: 80px;
+    opacity: 0;
+  }
+}
+
+@keyframes smokeTwo {
+  0% {
+    bottom: 40px;
+    opacity: 0;
+  }
+
+  40% {
+    bottom: 70px;
+    opacity: .5;
+  }
+
+  80% {
+    bottom: 80px;
+    opacity: .3;
+  }
+
+  100% {
+    bottom: 80px;
+    opacity: 0;
+  }
+}
+
+.coffee-medium__smoke-one {
+  opacity: 0;
+  bottom: 50px;
+  left: 102px;
+  animation: smokeOne 3s 4s linear infinite;
+}
+
+.coffee-medium__smoke-two {
+  opacity: 0;
+  bottom: 70px;
+  left: 118px;
+  animation: smokeTwo 3s 5s linear infinite;
+}
+
+.coffee-medium__smoke-three {
+  opacity: 0;
+  bottom: 65px;
+  right: 118px;
+  animation: smokeTwo 3s 6s linear infinite;
+}
+
+.coffee-medium__smoke-for {
+  opacity: 0;
+  bottom: 50px;
+  right: 102px;
+  animation: smokeOne 3s 5s linear infinite;
+}
+
+.coffee-footer {
+  width: 95%;
+  height: 15px;
+  position: absolute;
+  bottom: 25px;
+  left: calc(50% - 47.5%);
+  background-color: #41bdad;
+  border-radius: 10px;
+}
+
+.coffee-footer::after {
+  content: "";
+  width: 106%;
+  height: 26px;
+  position: absolute;
+  bottom: -25px;
+  left: -8px;
+  background-color: #000;
+}
+
+.intro-preparacion {
+  max-width: 100%;
+  padding: 2rem;
+  background-color: #fefaf6;
+  border-left: 5px solid #8b4513;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1s ease forwards;
+}
+
+.intro-preparacion h2 {
+  font-family: 'Georgia', serif;
+  font-size: 2rem;
+  color: #6d421d;
+  margin-bottom: 1rem;
+}
+
+.intro-preparacion p {
+  font-family: 'Arial', sans-serif;
+  font-size: 1.1rem;
+  line-height: 1.7;
+  color: #3a2e2a;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
